# esprit

./: .gitignore  LICENSE  README.md  gui.py  main.py  pyproject.toml
.github/workflows/: build-macos.yml
