[project]
name = "cute"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "soundfile>=0.14.0",
    "tkinterdnd2>=0.6.2",
]

[project.scripts]
cute = "main:main"
cute-gui = "gui:main"
